--- a/src/main/frontend/themes/flossrennen-theme/theme-editor.css
+++ b/src/main/frontend/themes/flossrennen-theme/theme-editor.css
@@ -27,6 +27,14 @@ html {
 
 .AppNavbarLayout { padding:var(--lumo-space-s); }
 
+.MainViewContent {
+  background-color:rgba(200,200,200,1);
+}
+
+.MainViewContentElements {
+  background-color:rgba(255,255,255,1);
+}
+
 vaadin-login-form vaadin-login-form-wrapper {
   background-color:rgba(242,244,245,1);
   border-radius:16px;
