Styles Konstanten Interface hinzugefügt

--- a/src/main/frontend/themes/flossrennen-theme/theme-editor.css
+++ b/src/main/frontend/themes/flossrennen-theme/theme-editor.css
@@ -2,6 +2,12 @@
  * This file has been created by the Vaadin Theme Editor. Please note that
  * manual changes to individual CSS properties may be overwritten by the theme editor.
  */
+html {
+    --lumo-base-color: rgba(0, 133, 201);
+    --lumo-body-text-color: rgba(10, 10, 10, 1);
+    --lumo-header-text-color: rgba(0, 133, 201);
+}
+
 .AppTitel,
 .AppDrawerToggle {
   background-color:rgb(255,255,255,1);
@@ -9,20 +15,6 @@
   border-radius:100vh;
   border-style:solid;
   padding:var(--lumo-space-s);
-}
-
-div.LoginHeaderBar {
-  background-color:rgb(255,255,255,1);
-  border-color:rgba(0,0,0,0);
-  border-radius:100vh;
-  border-style:solid;
-  padding:var(--lumo-space-m);
-}
-
-html {
-  --lumo-base-color:rgba(0,133,201);
-  --lumo-body-text-color:rgba(10,10,10,1);
-  --lumo-header-text-color:rgba(0,133,201);
 }
 
 .AppNavbarLayout { padding:var(--lumo-space-s); }
